// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown should render Markdown in a p tag even for one paragraph 1`] = `

<p class="rsg--para-17">
  pizza
</p>

`;

exports[`Markdown should render Markdown in span in inline mode 1`] = `

<span class="rsg--text-27 rsg--inheritSize-28 rsg--baseColor-32">
  Hello
  <em class="rsg--text-27 rsg--inheritSize-28 rsg--baseColor-32 rsg--em-34">
    world
  </em>
  !
</span>

`;

exports[`Markdown should render Markdown with custom CSS classes 1`] = `

<div>
  <div class="rsg--spacing-19">
    <h1 class="rsg--heading-20 rsg--heading1-21">
      Header
    </h1>
  </div>
  <p class="rsg--para-17">
    Text with
    <em class="rsg--text-27 rsg--inheritSize-28 rsg--baseColor-32 rsg--em-34">
      some
    </em>
    <strong class="rsg--text-27 rsg--inheritSize-28 rsg--baseColor-32 rsg--strong-35">
      formatting
    </strong>
    and a
    <a href="/foo"
       class="rsg--link-18"
    >
      link
    </a>
    .
  </p>
  <p class="rsg--para-17">
    <img alt="Image"
         src="/bar.png"
    >
  </p>
</div>

`;

exports[`Markdown should render check-lists correctly 1`] = `

<ul class="rsg--ul-2 rsg--para-1">
  <li class="rsg--li-4 rsg--base-0">
    <input type="checkbox"
           class="rsg--input-5"
           readonly
    >
    list 1
  </li>
  <li class="rsg--li-4 rsg--base-0">
    <input type="checkbox"
           class="rsg--input-5"
           readonly
    >
    list 2
  </li>
  <li class="rsg--li-4 rsg--base-0">
    <input type="checkbox"
           class="rsg--input-5"
           checked
           readonly
    >
    list 3
  </li>
</ul>

`;

exports[`Markdown should render code blocks without escaping 1`] = `

<pre class="rsg--pre-9 rsg--para-1">
  <code class="lang-html rsg--code-8">
    <foo>
    </foo>
  </code>
</pre>

`;

exports[`Markdown should render headings correctly 1`] = `

<div>
  <div class="rsg--spacing-19">
    <h1 class="rsg--heading-20 rsg--heading1-21">
      one
    </h1>
  </div>
  <div class="rsg--spacing-19">
    <h2 class="rsg--heading-20 rsg--heading2-22">
      two
    </h2>
  </div>
  <div class="rsg--spacing-19">
    <h3 class="rsg--heading-20 rsg--heading3-23">
      three
    </h3>
  </div>
  <div class="rsg--spacing-19">
    <h4 class="rsg--heading-20 rsg--heading4-24">
      four
    </h4>
  </div>
  <div class="rsg--spacing-19">
    <h5 class="rsg--heading-20 rsg--heading5-25">
      five
    </h5>
  </div>
  <div class="rsg--spacing-19">
    <h6 class="rsg--heading-20 rsg--heading6-26">
      six
    </h6>
  </div>
</div>

`;

exports[`Markdown should render inline code with escaping 1`] = `

<p class="rsg--para-17">
  Foo
  <code class="rsg--code-8">
    &lt;bar&gt;
  </code>
  baz
</p>

`;

exports[`Markdown should render links 1`] = `

<p class="rsg--para-17">
  a
  <a href="http://test.com"
     class="rsg--link-18"
  >
    link
  </a>
</p>

`;

exports[`Markdown should render mixed nested lists correctly 1`] = `

<ul class="rsg--ul-2 rsg--para-1">
  <li class="rsg--li-4 rsg--base-0">
    list 1
  </li>
  <li class="rsg--li-4 rsg--base-0">
    list 2
    <ol class="rsg--ol-3 rsg--para-1"
        start="1"
    >
      <li class="rsg--li-4 rsg--base-0">
        Sub-list
      </li>
      <li class="rsg--li-4 rsg--base-0">
        Sub-list
      </li>
      <li class="rsg--li-4 rsg--base-0">
        Sub-list
      </li>
    </ol>
  </li>
  <li class="rsg--li-4 rsg--base-0">
    list 3
  </li>
</ul>

`;

exports[`Markdown should render ordered lists correctly 1`] = `

<ol class="rsg--ol-3 rsg--para-1"
    start="1"
>
  <li class="rsg--li-4 rsg--base-0">
    list
  </li>
  <li class="rsg--li-4 rsg--base-0">
    item
  </li>
  <li class="rsg--li-4 rsg--base-0">
    three
  </li>
</ol>

`;

exports[`Markdown should render unordered lists correctly 1`] = `

<ul class="rsg--ul-2 rsg--para-1">
  <li class="rsg--li-4 rsg--base-0">
    list
  </li>
  <li class="rsg--li-4 rsg--base-0">
    item
  </li>
  <li class="rsg--li-4 rsg--base-0">
    three
  </li>
</ul>

`;
